# blog

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: packages.md
docs/blog/: .authors.yml
docs/blog/posts/: hello-word.md
