[project]
name = "jesseio"
version = "0.1.0"
description = "The blog"
authors = [
    {name = "Jesse C", email = "jjames1776@outlook.com"},
]
dependencies = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.4",
    "mkdocs-autorefs>=0.5.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
